# tauri-rust-solidjs-wasm_spike

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  SIMPLIFIED_PLAN.md  WASM-INTEGRATION.md  index.html  package.json  tsconfig.json  vite.config.ts
public/wasm/: particle_sim.d.ts  particle_sim.js  particle_sim_bg.wasm  particle_sim_bg.wasm.d.ts
src/: App.css  app.tsx  global.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/canvas_sim/: Cargo.toml
src-tauri/canvas_sim/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/particle_sim/: Cargo.toml
src-tauri/particle_sim/src/: lib.rs
src-tauri/src/: commands.rs  commands_test.rs  lib.rs  main.rs
src/components/: CanvasPerformanceTest.module.css  CanvasPerformanceTest.tsx  ParticleSimulation.tsx  TestComponent.tsx
src/components/canvas/: CanvasRenderer.ts  WasmAdapter.ts
src/components/canvas-test/: CanvasTestHarness.ts  CanvasTestHarness_v2.ts  PerformanceCharts.tsx
src/components/canvas-test/controllers/: AnimationControllers.ts
src/components/canvas-test/core/: CanvasRendererCore.ts
src/components/canvas-test/factories/: CanvasObjectFactory.ts
src/components/canvas-test/handlers/: InteractionHandler.ts
src/components/canvas-test/monitoring/: PerformanceMonitor.ts
src/components/canvas-test/types/: CanvasTypes.ts
src/components/particle-system/: EmitterConfig.ts  FpsChart.tsx  Particle.ts  ParticleControls.tsx  ParticleSystem.ts  PixiRenderer.ts  StatusDisplay.tsx  WasmParticleSystemV2.ts
src/types/: systemMetrics.ts  tauri.d.ts  wasm-modules.d.ts  wasm.d.ts
