[package]
name = "particle_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] #  Create a dynamic library for WebAssembly and a static library for Rust

[dependencies]
wasm-bindgen = "0.2" #  JavaScript bindings for WebAssembly
getrandom = {version = "0.2", features = ["js"]} #  Random number generation for WASM
rand = "0.8" #  Random number generation for Rust
